classDiagram
  class User {
    userId
    username
    role
    accountStatus
  }
  class Course {
    courseId
    name
    status
    term
  }
  class CourseMember {
    memberId
    roleInCourse
    memberStatus
  }
  class Chapter {
    chapterId
    title
    sortOrder
  }
  class Resource {
    resourceId
    type
    visibleScope
  }
  class Experiment {
    experimentId
    title
    status
    deadline
  }
  class Homework {
    homeworkId
    title
    type
    status
  }
  class Submission {
    submissionId
    version
    submitStatus
    submittedAt
  }
  class AutoEvaluationResult {
    evaluationId
    status
    score
    message
  }
  class GradeItem {
    gradeItemId
    sourceType
    weight
  }
  class GradeRecord {
    gradeRecordId
    rawScore
    weightedScore
    publishStatus
  }
  class Notification {
    notificationId
    type
    readStatus
  }
  class AuditLog {
    logId
    operationType
    resultStatus
  }

  User "1" --> "*" CourseMember : joins
  Course "1" --> "*" CourseMember : has
  Course "1" --> "*" Chapter : contains
  Course "1" --> "*" Resource : publishes
  Course "1" --> "*" Experiment : owns
  Course "1" --> "*" Homework : owns
  Experiment "1" --> "*" Submission : receives
  Homework "1" --> "*" Submission : receives
  Submission "1" --> "0..1" AutoEvaluationResult : produces
  Course "1" --> "*" GradeItem : configures
  GradeItem "1" --> "*" GradeRecord : calculates
  User "1" --> "*" GradeRecord : receives
  User "1" --> "*" Notification : receives
  User "1" --> "*" AuditLog : operates
